<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_tv"
            android:textSize="22sp"
            android:layout_margin="8dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/mail_tv"
            android:textSize="22sp"
            android:layout_margin="8dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/contact_tv"
            android:textSize="22sp"
            android:layout_margin="8dp"
            android:hint="@string/contact"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/org_tv"
            android:lines="2"
            android:maxLines="3"
            android:textSize="22sp"
            android:layout_margin="8dp"
            android:hint="@string/organization"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/query_tv"
            android:lines="2"
            android:maxLines="5"
            android:textSize="22sp"
            android:layout_margin="8dp"
            android:hint="@string/query"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/scan_btn"
            android:layout_margin="8dp"
            android:text="@string/scan_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/image_pic_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:text="@string/image"/>
        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:text="@string/send"/>

        <ImageView
            android:id="@+id/picked_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="visible"
            android:layout_margin="8dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>